Sorting functionality added (by price) & MVP tests fixed