@@ -34,22 +34,43 @@ class GlampingServiceTest {
 
     @Test
     void getAll_ReturnsListOfGlampingDTOs() throws ExecutionException, InterruptedException, IOException {
-        Glamping mockGlamping1 = new Glamping("1", "Glamping 1", "Description 1", "pic1.jpg", "Location 1", new BigDecimal("100.00"));
-        Glamping mockGlamping2 = new Glamping("2", "Glamping 2", "Description 2", "pic2.jpg", "Location 2", new BigDecimal("200.00"));
+        Glamping mockGlamping1 = new Glamping();
+        mockGlamping1.setId("1");
+        mockGlamping1.setName("Glamping 1");
+        mockGlamping1.setDescription("Description 1");
+        mockGlamping1.setPicture("pic1.jpg");
+        mockGlamping1.setLocation("Location 1");
+        mockGlamping1.setPrice(new BigDecimal("100.00"));
+
+        Glamping mockGlamping2 = new Glamping();
+        mockGlamping2.setId("2");
+        mockGlamping2.setName("Glamping 2");
+        mockGlamping2.setDescription("Description 2");
+        mockGlamping2.setPicture("pic2.jpg");
+        mockGlamping2.setLocation("Location 2");
+        mockGlamping2.setPrice(new BigDecimal("200.00"));
+
         when(glampingRepository.findAll()).thenReturn(Arrays.asList(mockGlamping1, mockGlamping2));
 
         List<GlampingDTO> result = glampingService.getAll();
 
         assertEquals(2, result.size());
-        assertEquals("Glamping 1", result.getFirst().getName());
-        assertEquals("100.00", result.getFirst().getPrice().toString());
+        assertEquals("Glamping 1", result.get(0).getName());
+        assertEquals("100.00", result.get(0).getPrice().toString());
         verify(glampingRepository, times(1)).findAll();
     }
 
     @Test
     void getById_ReturnsGlampingDTOById() throws ExecutionException, InterruptedException, IOException {
         String id = "1";
-        Glamping mockGlamping = new Glamping(id, "Glamping 1", "Description 1", "pic1.jpg", "Location 1", new BigDecimal("100.00"));
+        Glamping mockGlamping = new Glamping();
+        mockGlamping.setId(id);
+        mockGlamping.setName("Glamping 1");
+        mockGlamping.setDescription("Description 1");
+        mockGlamping.setPicture("pic1.jpg");
+        mockGlamping.setLocation("Location 1");
+        mockGlamping.setPrice(new BigDecimal("100.00"));
+
         when(glampingRepository.findById(id)).thenReturn(mockGlamping);
 
         GlampingDTO result = glampingService.getById(id);
@@ -58,13 +79,5 @@ class GlampingServiceTest {
         assertEquals("Glamping 1", result.getName());
         assertEquals("100.00", result.getPrice().toString());
         verify(glampingRepository, times(1)).findById(id);
-    }
-
-    @Test
-    void getById_ThrowsExceptionWhenGlampingNotFound() throws ExecutionException, InterruptedException, IOException {
-        String id = "1";
-        when(glampingRepository.findById(id)).thenReturn(null);
-
-        assertThrows(IOException.class, () -> glampingService.getById(id));
     }
 }
